--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,8 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
-  password: MyString
-
-two:
-  name: MyString
-  email: MyString
-  password: MyString
+  name: Teszt Elek
+  email: test@dev.com
+  encrypted_password: <%= Digest::SHA1.hexdigest('titoka') %>
+  salt: a
+  id: 22
