--- a/test/fixtures/wines.yml
+++ b/test/fixtures/wines.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  wineType: MyString
-  vintage: 1
+  name: Kadarka
+  wineType: red
+  vintage: 2020
 
 two:
-  name: MyString
-  wineType: MyString
-  vintage: 1
+  name: Rizling
+  wineType: white
+  vintage: 2019
+
+three:
+  name: Merlot
+  wineType: red
+  vintage: 2018
+
+four:
+  name: Bakator
+  wineType: white
+  vintage: 2021
